# NC-Library

./: .gitignore  CMakeLists.txt  CMakePaths.config  README.md
docs/: dev_docs.md  writing_adapters.md
example/: CMakeLists.txt
example/controller/: controlled_interface.h  modules.h  reconf_controller.h  static_module.h  top_reconf_ctrl.cpp
example/nested_test/: nested_interface.h  test_modules.cpp  test_modules.h  top_nested_test.cpp
src/: nc_definitions.h  nc_interface.h  nc_report.h
src/forwarding/: adapter_traits.h  adapters.h  nc_decoupled_value.h  port_adapter.h  tlm_adapter.cpp  tlm_adapter.h  vector_adapter.h  vector_adapter.tpp
src/locking/: reconf_lock.h
src/modules/: abstract_module_base.cpp  abstract_module_base.h  split_manager_base.cpp  split_manager_base.h
src/processes/: nc_sensitive_opts.cpp  nc_sensitive_opts.h  spawn_args.h
src/region/: abstract_reconf_region_base.cpp  abstract_reconf_region_base.h  conf_manager.h  reconf_region.h
test/: CMakeLists.txt  bw_if_dummy.h  run_all_tests.cpp.tmpl  run_all_tests.sh
test/cthread_test/: inout_interface.h  test_modules.h  top_cthread_test.cpp
test/immediate_transaction_test/: test_modules.h  tlm_initiator_interface.h  top_immediate_transaction_test.cpp
test/inner_signal_many_writers_test/: test_modules.h  top_inner_signal_many_writers_test.cpp
test/inner_signal_test/: simple_port_interface.h  test_modules.h  top_inner_signal_test.cpp
test/method_test/: inout_interface.h  test_modules.h  top_method_test.cpp
test/nested_test/: test_modules.h  top_nested_test.cpp
test/nested_unload/: top_nested_unload_test.cpp
test/port_tests/: simple_port_interface.h  test_modules.h  top_ports_and_sockets_test.cpp
test/preload_test/: nested_interface.h  test_modules.h  top_preload_test.cpp
test/pure_tlm_interface/: test_interface.h  test_modules.h  top_general_test.cpp  top_reconf_during_transaction.cpp  top_transaction_during_reconf.cpp
test/readme_example/: CMakeLists.txt
test/readme_example/src/: my_interface.h  test_modules.h  top_readme_example.cpp
test/splitted_test/: splitted_interface.h  test_modules.h  top_splitted_test.cpp
test/thread_test/: test_modules.h  top_thread_test.cpp
test/vector_test/: inout_interface.h  test_modules.h  top_vector_test.cpp
test/write_test/: simple_port_interface.h  test_modules.h  top_double_write.cpp
